--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/AllContactsAreas/Details.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/AllContactsAreas/Details.cshtml
@@ -20,12 +20,12 @@
             <th scope="row">@Model.Id</th>
             <td>@Html.Raw(Model.Address)</td>
             <td>@Html.Raw(Model.AddressHeader)</td>
-            <td>@Model.PhoneHeader</td>
-            <td style="width:200px">@Model.Phone</td>
-            <td>@Model.OfficeHeader</td>
-            <td>@Model.Hours</td>
-            <td>@Model.ContactHeader</td>
-            <td>@Model.ContactHeaderDescription</td>
+            <td>@Html.Raw(Model.PhoneHeader)</td>
+            <td style="width:200px">@Html.Raw(Model.Phone)</td>
+            <td>@Html.Raw(Model.OfficeHeader)</td>
+            <td>@Html.Raw(Model.Hours)</td>
+            <td>@Html.Raw(Model.ContactHeader)</td>
+            <td>@Html.Raw(Model.ContactHeaderDescription)</td>
 
         </tr>
 
