--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/AttorneysBio/Index.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/AttorneysBio/Index.cshtml
@@ -60,6 +60,7 @@
                     <td>@item.PractiseHeader</td>
                     <td>@item.PrcatiseDesc</td>
                     <td>
+                        <a href="/Admin/AttorneysBio/Edit/@item.Id"><i class="fas fa-edit"></i></a>
                         <a href="/Admin/AttorneysBio/Delete/@item.Id" onclick="return confirm('Silmek isdediyinizden eminsinizmi?')" style="color:red"><i class="fas fa-trash-alt"></i></a>
                         <br />
                     </td>
