--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Blog/Details.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Blog/Details.cshtml
@@ -35,22 +35,22 @@
                     <td>
                         <img width="200" height="150" src="~/images/blog/@Model.Image" alt="Alternate Text" />
                     </td>
-                    <td>@Model.Name</td>
+                    <td>@Html.Raw(Model.Name)</td>
                     <td>@Model.Dates</td>
-                    <td>@Model.Buttontext1</td>
+                    <td>@Html.Raw(Model.Buttontext1)</td>
                     <td>@Model.ButtonLink1</td>
-                    <td>@Model.Buttontext2</td>
+                    <td>@Html.Raw(Model.Buttontext2)</td>
                     <td>@Model.ButtonLink2</td>
-                    <td>@Model.Header</td>
-                    <td>@Model.headerDesc</td>
-                    <td>@Model.Title</td>
-                    <td>@Model.titleDesc</td>
+                    <td>@Html.Raw(Model.Header)</td>
+                    <td>@Html.Raw(Model.headerDesc)</td>
+                    <td>@Html.Raw(Model.Title)</td>
+                    <td>@Html.Raw(Model.titleDesc)</td>
                     <td>@Model.Comment</td>
                     <td>@Html.Raw(Model.AboutDesc)</td>
-                    <td>@Model.RecentTitle</td>
+                    <td>@Html.Raw(Model.RecentTitle)</td>
                     <td>@Model.RecentDesc</td>
-                    <td>@Model.CateagoriesTitle</td>
-                    <td>@Model.CategoriesDesc</td>
+                    <td>@Html.Raw(Model.CateagoriesTitle)</td>
+                    <td>@Html.Raw(Model.CategoriesDesc)</td>
                     
                 </tr>
         </tbody>
