--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/BlogHeader/Details.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/BlogHeader/Details.cshtml
@@ -20,7 +20,7 @@
                     <img width="200" height="150" src="~/images/blogHeader/@Model.Image" alt="Alternate Text" />
                 </td>
                 <td>@Html.Raw(Model.header)</td>
-                <td>@Model.Description</td>
+                <td>@Html.Raw(Model.Description)</td>
 
               
             </tr>
