--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/PracticeAbout/Details.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/PracticeAbout/Details.cshtml
@@ -19,10 +19,10 @@
             <tr>
                 <th scope="row">@Model.Id</th>
                 <td>@Html.Raw(Model.IconLink)</td>
-                <td>@Model.Header</td>
-                <td>@Model.Description</td>
-                <td>@Model.Learntext</td>
-                <td>@Model.LearnLink</td>
+                <td>@Html.Raw(Model.Header)</td>
+                <td>@Html.Raw(Model.Description)</td>
+                <td>@Html.Raw(Model.Learntext)</td>
+                <td>@Html.Raw(Model.LearnLink)</td>
 
                
             </tr>
