--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Shared/AdminLayout.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Shared/AdminLayout.cshtml
@@ -120,7 +120,7 @@
             <li class="nav-item">
                 <a class="nav-link collapsed" href="~/admin/#" data-toggle="collapse" data-target="#collapseUtilities2"
                    aria-expanded="true" aria-controls="collapseUtilities2">
-                    <i class="fab fa-app-store"></i>
+                    <i class="fab fa-firstdraft"></i>
                     <span>Attorneys</span>
                 </a>
                 <div id="collapseUtilities2" class="collapse" aria-labelledby="headingUtilities"
@@ -138,7 +138,7 @@
             <li class="nav-item">
                 <a class="nav-link collapsed" href="~/admin/#" data-toggle="collapse" data-target="#collapseUtilities3"
                    aria-expanded="true" aria-controls="collapseUtilities3">
-                    <i class="fab fa-app-store"></i>
+                    <i class="fas fa-blog"></i>
                     <span>Blog</span>
                 </a>
                 <div id="collapseUtilities3" class="collapse" aria-labelledby="headingUtilities"
@@ -151,6 +151,35 @@
                 </div>
             </li>
 
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="~/admin/#" data-toggle="collapse" data-target="#collapseUtilities4"
+                   aria-expanded="true" aria-controls="collapseUtilities4">
+                    <i class="fas fa-address-card"></i>
+                    <span>Contact Page</span>
+                </a>
+                <div id="collapseUtilities4" class="collapse" aria-labelledby="headingUtilities"
+                     data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">Custom Utilities:</h6>
+                        <a class="collapse-item" href="~/admin/AllContactsAreas/Index">All Contact Areas</a>
+                    </div>
+                </div>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="~/admin/#" data-toggle="collapse" data-target="#collapseUtilities5"
+                   aria-expanded="true" aria-controls="collapseUtilities5">
+                    <i class="fas fa-mail-bulk"></i>
+                    <span>Send Message</span>
+                </a>
+                <div id="collapseUtilities5" class="collapse" aria-labelledby="headingUtilities"
+                     data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">Custom Utilities:</h6>
+                        <a class="collapse-item" href="~/admin/Contact/Index">Messages</a>
+                    </div>
+                </div>
+            </li>
             <!-- Divider -->
             <hr class="sidebar-divider">
 
