--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Practise/Create.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Practise/Create.cshtml
@@ -4,8 +4,8 @@
 <form method="post" enctype="multipart/form-data">
     @*<div asp-validation-summary="ModelOnly" style="color:red"></div>*@
     <div class="mb-3">
-        <label>Link</label>
-        <input type="text" class="form-control" asp-for="Link">
+        <label>Link<a href="https://fontawesome.com/v5/search?m=free">  burdan isdediyiniz iconu goture bilersiz</a></label>
+        <input type="text"  class="form-control" asp-for="Link">
         <span asp-validation-for="Link" style="color:red"></span>
     </div>
     <div class="mb-3">
