--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Practise/Edit.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Practise/Edit.cshtml
@@ -5,7 +5,7 @@
 <form method="post" enctype="multipart/form-data">
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
-        <label>Link</label>
+        <label>Link<a href="https://fontawesome.com/v5/search?m=free">  burdan isdediyiniz iconu goture bilersiz</a></label>
         <textarea asp-for="Link" id="Link" class="form-control"></textarea>
         <span asp-validation-for="Link" class="text-danger"></span>
     </div>
@@ -19,17 +19,6 @@
     <input type="submit" class="btn btn-danger btn-block" value="Update" />
 </form>
 
-
-@section scripts{
-
-    <partial name="_ValidationScriptsPartial" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor5/32.0.0/ckeditor.min.js"></script>
-    <script>
-        ClassicEditor.create(document.querySelector('#Link')).catch(error => {
-            console.error(error);
-        });
-    </script>
-}
 
 @section scripts1{
 
