--- a/LawyerbackEnd/LawyerbackEnd/Views/Home/Pages.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Views/Home/Pages.cshtml
@@ -11,8 +11,8 @@
     {
         <div class="inner-desc">
             <div class="container">
-                <h1 class="page-title">@item.Name</h1>
-                <span class="post-subtitle page-subtitle">@item.Description</span>
+                <h1 class="page-title">@Html.Raw(item.Name)</h1>
+                <span class="post-subtitle page-subtitle">@Html.Raw(item.Description)</span>
             </div>
         </div>
     }
@@ -34,13 +34,13 @@
                     <div class="testimonial-wrapper" style="height:300px">
 
                         <div class="testimonial-content">
-                            <h6>@item.Description</h6>
+                            <h6>@Html.Raw(item.Description)</h6>
                         </div>
                         <div class="icon-box-wrapper">
                             <div class="icon-box-icon testimonial-client"><img src="~/images/testimonials/@item.Image" style="width:100px;height:100px;border-radius:50%;" alt=""></div>
                             <div class="icon-box-content">
-                                <div class="client-name">@item.Name</div>
-                                <p class="client-company">@item.Company</p>
+                                <div class="client-name">@Html.Raw(item.Name)</div>
+                                <p class="client-company">@Html.Raw(item.Company)</p>
                             </div>
                         </div>
 
